--- a/aggregation.qmd
+++ b/aggregation.qmd
@@ -17,6 +17,7 @@ library(broman)
 library(gt)
 library(flextable)
 library(officer)
+library(glue)
 
 #Levels
 month_levels <- c("Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec")
